<!--
  ~ Copyright (c) 2016 Krumbs Inc
  ~ All rights reserved.
  ~
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".ValidateSelectorActivity"
    android:id="@+id/parent_container">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonTranslateTask"
                android:id="@+id/buttonTranslateTask"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/buttonAnnotateTask"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/verifyTypeTitle"
            android:id="@+id/verifyTypeTitle"
            android:padding="@dimen/dgts__title_text_size"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonVerifyTask"
            android:id="@+id/buttonVerifyTask"
            android:layout_gravity="center"
            android:nestedScrollingEnabled="true"
            android:layout_above="@+id/buttonAnnotateTask"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAnnotateTask"
            android:id="@+id/buttonAnnotateTask"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/buttonTranslateTask"
            android:layout_alignEnd="@+id/buttonTranslateTask" />


    </RelativeLayout>

    <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/camera_container"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginBottom="92dp"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true">-->

    <!--</FrameLayout>-->


</RelativeLayout>
