<!--
  ~ Copyright (c) 2016 Krumbs Inc
  ~ All rights reserved.
  ~
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".ValidateActivity"
    android:id="@+id/parent_container">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonValidateNonReleventData"
                android:id="@+id/buttonValidateNonReleventData"
            android:layout_above="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="40dp"
            android:layout_marginEnd="40dp" />

        1<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/validateTranslateTitle"
            android:id="@+id/validateTranslateTitle"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:layout_gravity="center_horizontal|top"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="71dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonValidateReleventData"
            android:id="@+id/buttonValidateReleventData"
            android:layout_gravity="center"
            android:layout_above="@+id/textView"
            android:layout_toLeftOf="@+id/buttonSkip"
            android:layout_toStartOf="@+id/buttonSkip" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonSkip"
            android:id="@+id/buttonSkip"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buttonValidateNonReleventData"
            android:layout_alignRight="@+id/buttonValidateNonReleventData"
            android:layout_alignEnd="@+id/buttonValidateNonReleventData"
            android:layout_alignLeft="@+id/buttonValidateReleventData"
            android:layout_alignStart="@+id/buttonValidateReleventData"
            android:layout_below="@+id/validateTranslateTitle"
            android:id="@+id/tweetTextToValidate"></RelativeLayout>


    </RelativeLayout>

    <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:id="@+id/camera_container"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginBottom="92dp"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true">-->

    <!--</FrameLayout>-->


</RelativeLayout>
